[package]
name = "alumina-boot"
description = "Bootstrap compiler for the Alumina programming language"
repository = "https://github.com/alumina-lang/alumina"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proc-macro2 = "1"
itertools = "0.13"

[dependencies]
